--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,7 +20,7 @@
 <!-- Navigation Bar -->
 <nav class="navbar navbar-expand-sm navbar-fixed-top">
   <!-- Brand -->
-  <a class="navbar-brand" href="#">
+  <a class="navbar-brand" href="{{ url_for('index') }}">
     <img src="{{url_for('static', filename='images/ing_white.png')}}" width="30" height="30"/>
     FairShare
   </a>
