--- a/app/templates/calculation_results.html
+++ b/app/templates/calculation_results.html
@@ -1,13 +1,69 @@
+<head>
+  <title>Bootstrap Card</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+</head>
+
 {% extends "base.html" %}
 {% block title %} Calculation Results {% endblock %}
 
 {% block page_content %}
 <h1>Finance distribution between you and your partner</h1>
-<p>some bla bla here...</p>
+<p>some bla bla here</p>
+
+<div class="image-container" href="#">
+  <figure>
+    <img src="{{url_for('static', filename='images/man.png')}}" width="150" height="150">
+    <figcaption>Lars</figcaption>
+  </figure>
+  <figure>
+    <img src="{{url_for('static', filename='images/woman.png')}}" width="150" height="150">
+    <figcaption>Monika</figcaption>
+  </figure>
+</div>
+
+<div class="container">
+  <div class="card-columns">
+    <div class="card bg-primary">
+      <div class="card-body text-center">
+        <p class="card-text">Netto-Einkommen 5702€</p>
+      </div>
+    </div>
+    <div class="card bg-warning">
+      <div class="card-body text-center">
+        <p class="card-text">Netto-Einkommen 5702€</p>
+      </div>
+    </div>
+    <div class="card bg-success">
+      <div class="card-body text-center">
+        <p class="card-text">Netto-Einkommen 5702€</p>
+      </div>
+    </div>
+    <div class="card bg-danger">
+      <div class="card-body text-center">
+        <p class="card-text">Netto-Einkommen 5702€</p>
+      </div>
+    </div>  
+    <div class="card bg-light">
+      <div class="card-body text-center">
+        <p class="card-text">Netto-Einkommen 5702€</p>
+      </div>
+    </div>
+    <div class="card bg-info">
+      <div class="card-body text-center">
+        <p class="card-text">Netto-Einkommen 5702€</p>
+      </div>
+    </div>
+  </div>
+</div>
 
 <div class="row">
-  <div class="col-sm-3"></div>
-  <div class="col-sm-6">
+  <div class="col-sm-0"></div>
+  <div class="col-sm-12">
     <table class="table table-striped">
       <thead>
         <tr>
@@ -39,6 +95,104 @@
       </tbody>
     </table>
   </div>
+</div>
+
+<script src="https://d3js.org/d3.v4.js"></script>
+<!-- Add 2 buttons -->
+<button onclick="update(data1)"> Reduce work hour</button>
+<button onclick="update(data2)">Full time work</button>
+<button onclick="update(data3)">childcare</button>
+
+<!-- Create a div where the graph will take place -->
+<div id="my_dataviz"></div>
+
+<script>
+
+  // create 2 data_set
+  var data1 = [
+     {group: "work", value: 4},
+     {group: "life", value: 16},
+     {group: "care", value: 8}
+  ];
+  
+  var data2 = [
+     {group: "work", value: 7},
+     {group: "care", value: 1},
+     {group: "life", value: 20}
+  ];
+  
+
+  var data3 = [
+     {group: "work", value: 7},
+     {group: "care", value: 1},
+     {group: "life", value: 20}
+  ];
+  
+  // set the dimensions and margins of the graph
+  var margin = {top: 30, right: 30, bottom: 70, left: 60},
+      width = 460 - margin.left - margin.right,
+      height = 400 - margin.top - margin.bottom;
+  
+  // append the svg object to the body of the page
+  var svg = d3.select("#my_dataviz")
+    .append("svg")
+      .attr("width", width + margin.left + margin.right)
+      .attr("height", height + margin.top + margin.bottom)
+    .append("g")
+      .attr("transform",
+            "translate(" + margin.left + "," + margin.top + ")");
+  
+  // X axis
+  var x = d3.scaleBand()
+    .range([ 0, width ])
+    .domain(data1.map(function(d) { return d.group; }))
+    .padding(0.2);
+  svg.append("g")
+    .attr("transform", "translate(0," + height + ")")
+    .call(d3.axisBottom(x))
+  
+  // Add Y axis
+  var y = d3.scaleLinear()
+    .domain([0, 20])
+    .range([ height, 0]);
+  svg.append("g")
+    .attr("class", "myYaxis")
+    .call(d3.axisLeft(y));
+  
+  // A function that create / update the plot for a given variable:
+  function update(data) {
+  
+    var u = svg.selectAll("rect")
+      .data(data)
+  
+    u
+      .enter()
+      .append("rect")
+      .merge(u)
+      .transition()
+      .duration(1000)
+        .attr("x", function(d) { return x(d.group); })
+        .attr("y", function(d) { return y(d.value); })
+        .attr("width", x.bandwidth())
+        .attr("height", function(d) { return height - y(d.value); })
+        .attr("fill", "#69b3a2")
+  }
+  
+  // Initialize the plot with the first dataset
+  update(data1)
+  
+  </script>
+
+<script>
+  function updateCaption(value) {
+      var captionElement = document.getElementById('caption');
+      captionElement.innerText = 'Slider Value: ' + value;
+  }
+</script>
+
+<div class="slider-container">
+  <input type="range" min="0" max="100" value="50" class="slider" oninput="updateCaption(this.value)">
+  <div id="caption" class="caption">Slider Value: 50</div>
 </div>
 
 {% endblock %}
