--- a/app/templates/calculation_results.html
+++ b/app/templates/calculation_results.html
@@ -9,7 +9,7 @@
 </head>
 
 {% extends "base.html" %}
-{% block title %} Calculation Results {% endblock %}
+{% block title %} Calculation Results and Visualisation {% endblock %}
 
 {% block page_content %}
 <h1>Finance distribution between you and your partner</h1>
