--- a/app/templates/calculation_results.html
+++ b/app/templates/calculation_results.html
@@ -6,6 +6,8 @@
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://d3js.org/d3.v4.js"></script>
+  <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 </head>
 
 {% extends "base.html" %}
@@ -15,6 +17,18 @@
 <h1>Finance distribution between you and your partner</h1>
 <p>some bla bla here</p>
 
+
+<style>
+  .image-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .image-container img {
+    margin-right: 40px; /* Adjust the margin as per your preference */
+  }
+</style>
 <div class="image-container" href="#">
   <figure>
     <img src="{{url_for('static', filename='images/man.png')}}" width="150" height="150">
@@ -26,173 +40,102 @@
   </figure>
 </div>
 
-<div class="container">
-  <div class="card-columns">
-    <div class="card bg-primary">
-      <div class="card-body text-center">
-        <p class="card-text">Netto-Einkommen 5702€</p>
-      </div>
-    </div>
-    <div class="card bg-warning">
-      <div class="card-body text-center">
-        <p class="card-text">Netto-Einkommen 5702€</p>
-      </div>
-    </div>
-    <div class="card bg-success">
-      <div class="card-body text-center">
-        <p class="card-text">Netto-Einkommen 5702€</p>
-      </div>
-    </div>
-    <div class="card bg-danger">
-      <div class="card-body text-center">
-        <p class="card-text">Netto-Einkommen 5702€</p>
-      </div>
-    </div>  
-    <div class="card bg-light">
-      <div class="card-body text-center">
-        <p class="card-text">Netto-Einkommen 5702€</p>
-      </div>
-    </div>
-    <div class="card bg-info">
-      <div class="card-body text-center">
-        <p class="card-text">Netto-Einkommen 5702€</p>
-      </div>
-    </div>
-  </div>
-</div>
 
-<div class="row">
-  <div class="col-sm-0"></div>
-  <div class="col-sm-12">
-    <table class="table table-striped">
-      <thead>
-        <tr>
-          <th>Finance Items</th>
-          <th>Me</th>
-          <th>My Partner</th>
-          <th>Difference</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Total</td>
-          <td>{{ results['owner_total'] }}</td>
-          <td>{{ results['owner_expense'] }}</td>
-          <td>{{ results['owner_unpaid'] }}</td>
-        </tr>
-        <tr>
-          <td>Expenses</td>
-          <td>{{ results['partner_total'] }}</td>
-          <td>{{ results['partner_expense'] }}</td>
-          <td>{{ results['partner_unpaid'] }}</td>
-        </tr>
-        <tr>
-          <td>Unpaid work</td>
-          <td>{{ results['diff_total'] }}</td>
-          <td>{{ results['diff_expense'] }}</td>
-          <td>{{ results['diff_unpaid'] }}</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-</div>
-
-<script src="https://d3js.org/d3.v4.js"></script>
-<!-- Add 2 buttons -->
-<button onclick="update(data1)"> Reduce work hour</button>
-<button onclick="update(data2)">Full time work</button>
-<button onclick="update(data3)">childcare</button>
-
-<!-- Create a div where the graph will take place -->
 <div id="my_dataviz"></div>
 
 <script>
-
-  // create 2 data_set
-  var data1 = [
-     {group: "work", value: 4},
-     {group: "life", value: 16},
-     {group: "care", value: 8}
-  ];
-  
-  var data2 = [
-     {group: "work", value: 7},
-     {group: "care", value: 1},
-     {group: "life", value: 20}
-  ];
-  
-
-  var data3 = [
-     {group: "work", value: 7},
-     {group: "care", value: 1},
-     {group: "life", value: 20}
-  ];
-  
   // set the dimensions and margins of the graph
-  var margin = {top: 30, right: 30, bottom: 70, left: 60},
-      width = 460 - margin.left - margin.right,
-      height = 400 - margin.top - margin.bottom;
+  var width = 550
+      height = 450
+      margin = 40
   
-  // append the svg object to the body of the page
-  var svg = d3.select("#my_dataviz")
+  // The radius of the pieplot is half the width or half the height (smallest one). I subtract a bit of margin.
+  var radius = Math.min(width, height) / 2 - margin
+  
+  // append the svg object to the div called 'my_dataviz'
+  var svg1 = d3.select("#my_dataviz")
     .append("svg")
-      .attr("width", width + margin.left + margin.right)
-      .attr("height", height + margin.top + margin.bottom)
+      .attr("width", width)
+      .attr("height", height)
+      .append("g")
+      .attr("transform", "translate(" + width / 2 + "," + height / 2 + ")");
+
+  var svg2 = d3.select("#my_dataviz")
+    .append("svg")
+      .attr("width", width)
+      .attr("height", height)
     .append("g")
-      .attr("transform",
-            "translate(" + margin.left + "," + margin.top + ")");
+      .attr("transform", "translate(" + width / 2 + "," + height / 2 + ")");
+
+  // Create dummy data
+  var data1 = {a: 10, b: 20, c:10, d:10}
+  var data2 = {a: 10, b: 10, c:30, d:10}
+
+  // set the color scale
+  var color1 = d3.scaleOrdinal()
+    .domain(data1)
+    .range(d3.schemeSet2);
+
+  var color2 = d3.scaleOrdinal()
+  .domain(data2)
+  .range(d3.schemeSet2);
+  // Compute the position of each group on the pie:
+  var pie = d3.pie()
+    .value(function(d) {return d.value; })
+
+  var data1_ready = pie(d3.entries(data1))
+  var data2_ready = pie(d3.entries(data2))
+
+
+  // shape helper to build arcs:
+  var arcGenerator = d3.arc()
+    .innerRadius(0)
+    .outerRadius(radius)
   
-  // X axis
-  var x = d3.scaleBand()
-    .range([ 0, width ])
-    .domain(data1.map(function(d) { return d.group; }))
-    .padding(0.2);
-  svg.append("g")
-    .attr("transform", "translate(0," + height + ")")
-    .call(d3.axisBottom(x))
-  
-  // Add Y axis
-  var y = d3.scaleLinear()
-    .domain([0, 20])
-    .range([ height, 0]);
-  svg.append("g")
-    .attr("class", "myYaxis")
-    .call(d3.axisLeft(y));
-  
-  // A function that create / update the plot for a given variable:
-  function update(data) {
-  
-    var u = svg.selectAll("rect")
-      .data(data)
-  
-    u
-      .enter()
-      .append("rect")
-      .merge(u)
-      .transition()
-      .duration(1000)
-        .attr("x", function(d) { return x(d.group); })
-        .attr("y", function(d) { return y(d.value); })
-        .attr("width", x.bandwidth())
-        .attr("height", function(d) { return height - y(d.value); })
-        .attr("fill", "#69b3a2")
-  }
-  
-  // Initialize the plot with the first dataset
-  update(data1)
+  // Build the pie chart: Basically, each part of the pie is a path that we build using the arc function.
+  var path1 = svg1
+  .selectAll('mySlices')
+  .data(data1_ready)
+  .enter()
+  .append('path')
+    .attr('d', arcGenerator)
+    .attr('fill', function(d){ return(color1(d.data.key)) })
+    .attr("stroke", "black")
+    .style("stroke-width", "2px")
+    .style("opacity", 0.5)
+  // Now add the annotation. Use the centroid method to get the best coordinates
+  svg1
+    .selectAll('mySlices')
+    .data(data1_ready)
+    .enter()
+    .append('text')
+    .text(function(d){ return "grp " + d.data.key})
+    .attr("transform", function(d) { return "translate(" + arcGenerator.centroid(d) + ")";  })
+    .style("text-anchor", "middle")
+    .style("font-size", 17)
+
+    var path2 = svg2
+    .selectAll('mySlices')
+    .data(data2_ready)
+    .enter()
+    .append('path')
+      .attr('d', arcGenerator)
+      .attr('fill', function(d){ return(color2(d.data.key)) })
+      .attr("stroke", "black")
+      .style("stroke-width", "2px")
+      .style("opacity", 0.5)
+// Now add the annotation. Use the centroid method to get the best coordinates
+  svg2
+    .selectAll('mySlices')
+    .data(data2_ready)
+    .enter()
+    .append('text')
+    .text(function(d){ return "grp " + d.data.key})
+    .attr("transform", function(d) { return "translate(" + arcGenerator.centroid(d) + ")";  })
+    .style("text-anchor", "middle")
+    .style("font-size", 17)  
   
   </script>
 
-<script>
-  function updateCaption(value) {
-      var captionElement = document.getElementById('caption');
-      captionElement.innerText = 'Slider Value: ' + value;
-  }
-</script>
-
-<div class="slider-container">
-  <input type="range" min="0" max="100" value="50" class="slider" oninput="updateCaption(this.value)">
-  <div id="caption" class="caption">Slider Value: 50</div>
-</div>
 
 {% endblock %}
